--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-GEMINI_API_KEY =your_gemini_api_key
+GEMINI_API_KEY =AIzaSyD9OQVXRWVif2q2zjAuZ9wKbyY5xuLAd54
+GEMINI_API_KEY_FORM_PROJECT_NO = 348909352938
