--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-GEMINI_API_KEY =AIzaSyD9OQVXRWVif2q2zjAuZ9wKbyY5xuLAd54
-GEMINI_API_KEY_FORM_PROJECT_NO = 348909352938
+GEMINI_API_KEY ="key"
+GEMINI_API_KEY_FORM_PROJECT_NO = idS
